--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.application.name=Qr-code-generator
 #qrcode.output.directory=D:\\Projects\\Java\\qrgenerator\\QRCodeOuput
 qrcode.output.directory=C:\\Java\\QRcode
 
-#accessKey AKIA47DRVJ5BLMCZV47U
-#Secret key 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
+secretKey=
+accessKey=
 server.port=8000
 
 spring.servlet.multipart.max-file-size=10MB
