--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ spring.application.name=Qr-code-generator
 #qrcode.output.directory=D:\\Projects\\Java\\qrgenerator\\QRCodeOuput
 qrcode.output.directory=C:\\Java\\QRcode
 
-
+secretKey=
+accessKey=
 server.port=8000
 
 spring.servlet.multipart.max-file-size=10MB
